# x07-wasm-backend

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SUPPORT.md  rust-toolchain.toml  x07-toolchain.toml
crates/x07-wasm/: Cargo.toml  build.rs
crates/x07-wasm/spec/schemas/: index.json  x07-app.backend.request.schema.json  x07-app.backend.response.schema.json  x07-app.bundle.schema.json  x07-app.pack.schema.json  x07-app.profile.schema.json  x07-app.trace.schema.json  x07-arch.app.index.schema.json  x07-arch.device.index.schema.json  x07-arch.wasm.toolchain.index.schema.json  x07-arch.web_ui.index.schema.json  x07-arch.wit.index.schema.json  x07-device.bundle.manifest.schema.json  x07-device.capabilities.schema.json  x07-device.package.manifest.schema.json  x07-device.profile.schema.json  x07-device.telemetry.profile.schema.json  x07-embedded.kernel.starter.schema.json  x07-http.dispatch.schema.json  x07-http.frame.schema.json  x07-http.response.envelope.schema.json  x07-http.trace.schema.json  x07-metrics.snapshot.schema.json  x07-policy.card.schema.json  x07-provenance.dsse.envelope.schema.json  x07-slo.profile.schema.json  x07-wasm.app.build.report.schema.json  x07-wasm.app.pack.report.schema.json  x07-wasm.app.profile.validate.report.schema.json  x07-wasm.app.regress.from_incident.report.schema.json  x07-wasm.app.serve.report.schema.json  x07-wasm.app.test.report.schema.json  x07-wasm.app.verify.report.schema.json  x07-wasm.build.report.schema.json  x07-wasm.caps.evidence.schema.json  x07-wasm.caps.validate.report.schema.json  x07-wasm.cli.specrows.check.report.schema.json  x07-wasm.component.artifact.schema.json  x07-wasm.component.build.report.schema.json  x07-wasm.component.compose.report.schema.json  (+32 more)
crates/x07-wasm/src/: adapters.rs  blob.rs  cmdutil.rs  core_replay.rs  diag.rs  guest_diag.rs  json_doc.rs  lib.rs  main.rs  serve.rs  stream_payload.rs  util.rs  wasmtime_limits.rs
crates/x07-wasm/src/app/: backend.rs  backend_host.rs  build.rs  bundle.rs  contracts_validate.rs  load.rs  mod.rs  pack.rs  profile_validate.rs  regress_from_incident.rs  serve.rs  test.rs  verify.rs
crates/x07-wasm/src/arch/: mod.rs
crates/x07-wasm/src/binding/: cli.rs  mod.rs  resolve.rs
crates/x07-wasm/src/caps/: doc.rs  enforce.rs  evidence.rs  mod.rs  validate.rs
crates/x07-wasm/src/cli/: mod.rs  specrows.rs
crates/x07-wasm/src/component/: build.rs  compose.rs  mod.rs  profile_validate.rs  run.rs  targets.rs
crates/x07-wasm/src/deploy/: plan.rs
crates/x07-wasm/src/device/: build.rs  contracts.rs  host_abi.rs  index_validate.rs  mobile_templates.rs  mod.rs  native_surface.rs  package.rs  package_android.rs  package_ios.rs  profile_validate.rs  provenance.rs  regress_from_incident.rs  run.rs  sidecars.rs  template_render.rs  verify.rs
crates/x07-wasm/src/http_component_host/: mod.rs
crates/x07-wasm/src/http_reducer/: contracts_validate.rs  mod.rs  regress_from_incident.rs  replay.rs  serve.rs  test.rs
crates/x07-wasm/src/ops/: mod.rs  validate.rs
crates/x07-wasm/src/policy/: engine.rs  mod.rs  validate.rs
crates/x07-wasm/src/provenance/: attest.rs  dsse.rs  mod.rs  verify.rs
crates/x07-wasm/src/report/: canon.rs  cli_parse.rs  exit_code.rs  machine.rs  meta.rs  mod.rs  schema.rs
crates/x07-wasm/src/schema/: mod.rs
crates/x07-wasm/src/slo/: eval.rs  mod.rs  validate.rs
crates/x07-wasm/src/toolchain/: mod.rs  validate.rs
crates/x07-wasm/src/topology/: cli.rs  mod.rs  preview.rs
guest/http-state-doc-adapter/: Cargo.toml
guest/http-state-doc-adapter/src/: lib.rs
(+443 files in other folders)
