[package]
name = "x07-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "x07-wasm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
bytes = "1.10.0"
cap-rand = "3.4.5"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.16", features = ["tokio", "client-legacy", "http1"] }
jsonschema = "0.38.1"
regex = "1.11.2"
semver = "1.0.26"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
time = { version = "0.3.36", features = ["std"] }
wasmparser = "0.224.0"
tokio = { version = "1.44.0", features = ["rt", "macros", "net", "sync", "time"] }
wasmtime = "36.0.6"
wasmtime-wasi = "36.0.6"
wasmtime-wasi-http = "36.0.6"
wit-parser = "0.245.1"
